--- a/TableViewWithSearchViewContentOffset/TableViewWithSearchViewContentOffset/Base.lproj/Main.storyboard
+++ b/TableViewWithSearchViewContentOffset/TableViewWithSearchViewContentOffset/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,12 +16,12 @@
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" misplaced="YES" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pJO-Wn-NoB">
-                                <rect key="frame" x="0.0" y="64" width="375" height="490"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTN-NQ-lj8">
@@ -43,7 +42,6 @@
                             <constraint firstAttribute="trailing" secondItem="pJO-Wn-NoB" secondAttribute="trailing" id="rMj-wD-VHO"/>
                         </constraints>
                     </view>
-                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" title="Main" id="Kyu-Qe-PHg"/>
                     <connections>
                         <outlet property="tableView" destination="pJO-Wn-NoB" id="I7C-pm-QcX"/>
@@ -61,8 +59,8 @@
                         <viewControllerLayoutGuide type="top" id="2Sy-SF-kf2"/>
                         <viewControllerLayoutGuide type="bottom" id="o2P-3a-7Mb"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="s3H-La-z3F">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" misplaced="YES" id="s3H-La-z3F">
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -77,7 +75,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="e0g-ug-QF1" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="R0z-uP-5Th"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3Lc-kN-Fmp">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="3Lc-kN-Fmp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -95,7 +93,8 @@
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Kil-sE-Afg" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="NVu-RT-UYW">
+                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="NVu-RT-UYW">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
