--- a/ApplySnapshotIndexPaths/ApplySnapshotIndexPaths/Base.lproj/Main.storyboard
+++ b/ApplySnapshotIndexPaths/ApplySnapshotIndexPaths/Base.lproj/Main.storyboard
@@ -19,8 +19,9 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x2c-HD-wOB" customClass="DebuggingCollectionView" customModule="ApplySnapshotIndexPaths" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e7t-Zl-17N">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e7t-Zl-17N">
                                     <size key="itemSize" width="90" height="91"/>
+                                    <size key="estimatedItemSize" width="90" height="91"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -47,7 +48,6 @@
                                                 <constraint firstItem="dRz-IR-Wjw" firstAttribute="height" secondItem="OLW-Zs-fg0" secondAttribute="height" multiplier="0.225275" id="fvq-A7-UiS"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="90" height="91"/>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
